--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
                     <a href="#" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="2AGlazed.html" class="nav-link">UFOs - 2A</a>
+                    <a href="2Aglazed.html" class="nav-link">UFOs - 2A</a>
                 </li>
                 <li class="nav-item">
-                    <a href="2ASprinkles.html" class="nav-link">Bermuda Triangle - 2A</a>
+                    <a href="2Asprinkles.html" class="nav-link">Bermuda Triangle - 2A</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">2B - TK</a>
