--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <a href="#" class="nav-link">2B - TK</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">2C - TK</a>
+                    <a href="2Caliens.html" class="nav-link">Aliens - 2C</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">2C - TK</a>
