--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <a href="2Aglazed.html" class="nav-link">UFOs - 2A</a>
                 </li>
                 <li class="nav-item">
-                    <a href="2Asprinkles.html" class="nav-link">Bermuda Triangle - 2A</a>
+                    <a href="2ASprinkles.html" class="nav-link">Bermuda Triangle - 2A</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">2B - TK</a>
@@ -233,7 +233,7 @@
                     <a href="2Caliens.html" class="nav-link">Aliens - 2C</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">2C - TK</a>
+                    <a href="2Catlantis" class="nav-link">Atlantis - 2C</a>
                 </li>
             </ul>
         </nav>
