--- a/2Caliens.html
+++ b/2Caliens.html
@@ -125,7 +125,7 @@
         <p class="subtitle">Are We Alone in the Universe?</p>
         
         <nav class="navbar">
-            <a href="/index.html" class="nav-button">🏠 Home</a>
+            <a href="index.html" class="nav-button">🏠 Home</a>
         </nav>
         
         <div class="mystery-box">
