--- a/2Catlantis.html
+++ b/2Catlantis.html
@@ -125,7 +125,7 @@
         <p class="subtitle">A Lost Continent Under the Sea?</p>
         
         <nav class="navbar">
-            <a href="index.html" class="nav-button">🏠 Home</a>
+            <a href="https://malloryweber.github.io/unexplainedphenomena/index.html" class="nav-button">🏠 Home</a>
         </nav>
         
         <div class="mystery-box">
