--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
             <p>In library class, each section of 2nd grade got to choose an unexplained phenomenon through voting.  With the help of Mallory, students created a list of questions using the QFT (<a href="https://rightquestion.org/">Question Formulation Technique</a>) and sorted them into open- and closed-ended questions.  Then we examined different sources and whether we think they are reliable enough to trust.  Finally, we read books or encyclopedia articles on our topic to try and answer the questions.</p>
             <p>Many students came to the conclusion that some of the claims we see about things like aliens, mysterious places, etc are misleading.</p>
           <p>The purpose of this unit is to foster critical media literacy and research skills, as well as to debunk some urban legends while preserving curiosity about the unexplained things in our world!</p>
+            <p>Stay curious,<br>Mallory & Megan</p>
         </footer>
     </div>
 </body>
