--- a/2Caliens.html
+++ b/2Caliens.html
@@ -171,8 +171,10 @@
         <div class="stars"></div>
         
         <div class="mystery-box">
-            <p class="mystery-text">🔍 SO MANY QUESTIONS!</p>
-            <p>The biggest mystery is: are we alone in the universe?</p>
+            <p class="mystery-text">🔍 Sources:</p>
+            <p>DAVIS, B. J. (2010). THE KID'S GUIDE TO ALIENS. EDGE BOOKS.<p>
+            <p>OBERG, J. (2025). UNIDENTIFIED FLYING OBJECT (UFO). IN WORLD BOOK STUDENT.</p>
+            <p>ENCYCLOPAEDIA BRITANNICA. (n.d.). UNIDENTIFIED FLYING OBJECT (UFO). IN BRITANNICA SCHOOL.</p>
         </div>
     </div>
 </body>
