--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
                     <a href="#" class="nav-link">2B - TK</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">2B - TK</a>
+                    <a href="2Bbermuda.html" class="nav-link">Bermuea Triangle - 2B</a>
                 </li>
                 <li class="nav-item">
                     <a href="2Caliens.html" class="nav-link">Aliens - 2C</a>
                 </li>
                 <li class="nav-item">
-                    <a href="2Catlantis" class="nav-link">Atlantis - 2C</a>
+                    <a href="2Catlantis.html" class="nav-link">Atlantis - 2C</a>
                 </li>
             </ul>
         </nav>
