--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <a href="#" class="nav-link">2B - TK</a>
                 </li>
                 <li class="nav-item">
-                    <a href="2Bbermuda.html" class="nav-link">Bermuea Triangle - 2B</a>
+                    <a href="2Bbermuda.html" class="nav-link">Bermuda Triangle - 2B</a>
                 </li>
                 <li class="nav-item">
                     <a href="2Caliens.html" class="nav-link">Aliens - 2C</a>
