--- a/2Bbermuda.html
+++ b/2Bbermuda.html
@@ -252,7 +252,7 @@
         
         <div class="header">
             <h1>The Bermuda Triangle</h1>
-            <p>Mystery of the Ocean!</p>
+            <p>By the Mini Marshmallows</p>
             <div class="wave"></div>
         </div>
         
