--- a/2Bbermuda.html
+++ b/2Bbermuda.html
@@ -315,7 +315,7 @@
             </div>
             
             <div class="fun-facts">
-                <h2>Cool Ocean Facts</h2>
+                <h2>Fast Facts</h2>
                 <div class="fact-list">
                     🌊 The Bermuda Triangle is in the Atlantic Ocean<br>
                     🏝️ It's near Florida, Bermuda, and Puerto Rico<br>
