--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <a href="2ASprinkles.html" class="nav-link">Bermuda Triangle - 2A</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">2B - TK</a>
+                    <a href="#" class="nav-link">UFOs - 2B</a>
                 </li>
                 <li class="nav-item">
                     <a href="2Bbermuda.html" class="nav-link">Bermuda Triangle - 2B</a>
