--- a/2Bufos.html
+++ b/2Bufos.html
@@ -330,7 +330,7 @@
 
             
             <div class="citations">
-                <h3>References (APA Style)</h3>
+                <h3>Sources</h3>
                 <div class="citation">
                     Davis, B. J. (2010). <em>The kid's guide to aliens</em>. Edge Books.
                 </div>
