--- a/2Bufos.html
+++ b/2Bufos.html
@@ -284,7 +284,9 @@
 <body>
     <div class="stars"></div>
     
-    <button class="home-button" a href="https://malloryweber.github.io/unexplainedphenomena/index.html">Home</button>
+
+    <a href="https://malloryweber.github.io/unexplainedphenomena/index.html" class="home-button">Home</a>
+
     
     <div class="poster">
         <div class="header">
