--- a/2Bbermuda.html
+++ b/2Bbermuda.html
@@ -241,7 +241,8 @@
     </style>
 </head>
 <body>
-    <button class="home-button"> <a href="https://malloryweber.github.io/unexplainedphenomena/index.html">Home</a></button>
+     <a href="https://malloryweber.github.io/unexplainedphenomena/index.html" class="home-button">Home</a>
+
     
     <div class="poster">
         <div class="decorative-elements">
