--- a/2Catlantis.html
+++ b/2Catlantis.html
@@ -122,7 +122,7 @@
 <body>
     <div class="poster">
         <h1 class="title">🌊 THE MYSTERY OF ATLANTIS 🏛️</h1>
-        <p class="subtitle">A Lost Continent Under the Sea?</p>
+        <p class="subtitle">By the Cute Koalas</p>
         
         <nav class="navbar">
             <a href="https://malloryweber.github.io/unexplainedphenomena/index.html" class="nav-button">🏠 Home</a>
