--- a/2Caliens.html
+++ b/2Caliens.html
@@ -122,7 +122,7 @@
 <body>
     <div class="poster">
         <h1 class="title">👽 THE MYSTERY OF ALIENS 🛸</h1>
-        <p class="subtitle">By 2C</p>
+        <p class="subtitle">By the Cute Koalas</p>
         
         <nav class="navbar">
             <a href="https://malloryweber.github.io/unexplainedphenomena/index.html" class="nav-button">🏠 Home</a>
